#6: Fixed validation error borders (double + visible when disabled).
Changes related to #6 changed CSS specificity to validation error indicator (red borders), which in turn caused incorrect rendering of validation error borders for specialized controls (e.g. borders shown on both the outer control container and contained input field when control was enabled, and validation error borders shown on contained input field when disabled). Fixed!

Also reduced thickness of validation borders rendered by ControlBase's CSS from 2px to 0.065em, like most borders in Fit.UI.

--- a/Core/Styles.css
+++ b/Core/Styles.css
@@ -53,7 +53,7 @@ Stacking context, Z-index:
 /* Validation error (value validation) */
 .FitUiControl[data-enabled="true"][data-valid="false"]
 {
-	outline: 2px solid red;
+	outline: 0.065em solid red;
 }
 .FitUiControl[data-enabled="true"][data-valid="false"][data-errormessage][data-focused="false"]:not(#LegacyIE):hover:before,
 .FitUiControl[data-enabled="true"][data-valid="false"][data-errormessage][data-focused="true"]:not(#LegacyIE):before
